ubiquity (1.3.12) UNRELEASED; urgency=low

  * KDE frontend: Fix crash going back from advanced partitioner (mentioned
    in Malone #78881).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 Jan 2007 11:30:57 +0000

ubiquity (1.3.11) feisty; urgency=low

  * New partitioner: Fix crash while setting up partition edit dialog.
  * New partitioner: Indent partition names two spaces to the right of disk
    names.
  * GTK frontend: Drop privileges while invoking gconftool-2, and point it
    at the correct user's gconf directory; this fixes incorrect automounting
    during partitioning.
  * Fix language pack installation to clean up any broken packages in the
    dependency cache more comprehensively (LP: #61912 and probably a slew of
    duplicates).
  * GTK frontend: Fix various obscure crashes with non-ASCII
    autopartitioning choices (LP: #78778).
  * Automatic update of included source packages: partman-base 100ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 11 Jan 2007 14:50:50 +0000

ubiquity (1.3.10) feisty; urgency=low

  * GTK frontend: Fix another crash while setting up the resize progress bar
    (LP: #77978).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 10 Jan 2007 10:47:40 +0000

ubiquity (1.3.9) feisty; urgency=low

  [ Colin Watson ]
  * Document live filesystem manifests and installation from media other
    than CDs/DVDs in doc/README.
  * Extend backporting FAQ in doc/README to cover issues with backporting
    from feisty.
  * Automatic update of included source packages: silo-installer
    1.07ubuntu2.
  * Track silo-installer 1.07ubuntu2 changes (install device2obp, tweak
    PATH).

  [ Jonathan Riddell ]
  * KDE frontend: Fix crash if release_notes_url_template is None.
  * KDE frontend: Fix crash when editing GRUB device name.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue,  9 Jan 2007 17:56:20 +0000

ubiquity (1.3.8) feisty; urgency=low

  * Depend on python-gtk2 (>= 2.10) for gtk.LinkButton.