@@ -2,6 +2,9 @@ ubiquity (1.3.12) UNRELEASED; urgency=low
 
   * KDE frontend: Fix crash going back from advanced partitioner (mentioned
     in Malone #78881).
+  * Fix "no active autopartitioning choice" crash caused by incorrectly
+    traversing into partman-auto's "Guided - use the largest continuous free
+    space" option if present (LP: #76976).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 Jan 2007 11:30:57 +0000
 
